[bug #120132793] Fix signup page alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -628,3 +628,7 @@ time p {
   margin-right: 15px !important;
   margin-left: 15px !important;
 }
+
+.border {
+  border: 1px solid #ccc !important;
+}
